--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+spring.flyway.url=${SPRING_DATASOURCE_URL}
+spring.flyway.user=${SPRING_DATASOURCE_USERNAME}
+spring.flyway.password=${SPRING_DATASOURCE_PASSWORD}
