--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/scheduling-system
+
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -8,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.url=${SPRING_DATASOURCE_URL}
 spring.flyway.user=${SPRING_DATASOURCE_USERNAME}
 spring.flyway.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
